chore: add example value auth api
